--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.19",
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "masbug/flysystem-google-drive-ext": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
